tests/baselines/reference/noAssertForUnparseableTypedefs.errors.txt
bug26693.js(2,22): error TS2792: Cannot find module 'nope'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?


==== bug26693.js (1 errors) ====
    /** @typedef {module:locale} hi */
    import { nope } from 'nope';
                         ~~~~~~
!!! error TS2792: Cannot find module 'nope'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    